# crio

./: .gitignore  NEXT_STEPS.md  README.md  TODO.md  demo.py  demo_2.py  pyproject.toml
debugging/: DEBUG.md  debug.py
src/crio/: __init__.py  ckpt.py  ckpt_execvp.py  ckpt_fixed_o1.py  ckpt_forked.py
src/crio/ideas/: ckpt_early.py  ckpt_fixed_claude.py  ckpt_fixed_o1_attempt_1.py  ckpt_fixed_r1.py
src/cryo/: __init__.py  checkpoint.py  ckpt.py
