[project]
name = "criu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
]

[project.scripts]
criu = "criu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
