[project]
name = "crio"
version = "0.1.0"
description = "Freeze Python processes after imports using CRIU (Checkpoint/Restore In Userspace)"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
crio = "crio:main"

[build-system]
requires = [
  "pdm-backend"
]
build-backend = "pdm.backend"
